syntax = "proto3";

package proto;

import "google/api/annotations.proto";

service StoreApiService {
	rpc PutObject(PutObjectRequest) returns (PutObjectResponse) {
		option (google.api.http) = {
			post: "/object/upload"
            body: "*"
		};
	}
	
	rpc GetObject(GetObjectRequest) returns (GetObjectResponse) {
		option (google.api.http) = {
			post: "/object/download"
			body: "*"
		};
	}
}

message PutObjectRequest {
	string bucket = 1;
}

message PutObjectResponse {
	int32 code = 1;
	string msg = 2;
    string data = 3;  
}

message GetObjectRequest {
	string name = 1;
}

message GetObjectResponse {
	string res = 1;
}